add vim bindings

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -129,6 +129,7 @@ tasks:
 vscode:
   extensions:
     - bbenoist.Nix
+    - vscodevim.vim
 
 ## The 'github' section defines configuration of continuous prebuilds
 ## for GitHub repositories when the GitHub application
